[tool.poetry]
name = "changematrix"
version = "0.1.0"
description = ""
authors = ["Anderson de Araújo Alves <anderson.araujoa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
